Added Flight Test Sortie
Added assets for flight test sortie and tinkered with CSS formatting to put the pictures in the timeline (could not get it looking how I wanted)

--- a/css/styles.css
+++ b/css/styles.css
@@ -11573,6 +11573,13 @@ header.masthead .masthead-heading {
   padding: 0 20px 0 100px;
   text-align: left;
 }
+.timeline > li .timeline-panel-pics {
+  position: relative;
+  float: right;
+  width: 50%;
+  padding: 0 100px 0 120px;
+  text-align: left;
+}
 .timeline > li .timeline-panel:before {
   right: auto;
   left: -15px;
