--- a/css/styles.css
+++ b/css/styles.css
@@ -11422,6 +11422,13 @@ header.masthead {
   background-position: center center;
   background-size: cover;
 }
+
+.bottomimg {
+  position: relative;
+  margin-top: auto;
+  margin-bottom: 0;
+}
+
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
   font-style: italic;
