--- a/css/styles.css
+++ b/css/styles.css
@@ -11575,7 +11575,7 @@ header.masthead .masthead-heading {
 .timeline:before {
   position: absolute;
   top: 0;
-  bottom: 0;
+  bottom: 250px;
   left: 40px;
   width: 2px;
   margin-left: -1.5px;
