--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ title: "{{ page.title }}"
         </div>
 
         <div class="text-center mt-4">
-            <a class="btn btn-primary" href="/blog.html">Back to Blog</a>
+            <a class="btn btn-primary" href="/blog.html">Back to Overview</a>
         </div>
     </div>
 </section>
