--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #ffc800;
+  --bs-primary: #212529;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -41,7 +41,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 255, 200, 0;
+  --bs-primary-rgb: 0, 0, 0;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -11328,20 +11328,6 @@ p {
   margin-bottom: 2rem;
 }
 
-#skillset {
-  background-image: url("../assets/img/Mexico/Leon.jpg");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
-  background-size: cover;
-  padding-top: 5rem;
-  padding-bottom: 2rem;
-  }
-
-  section#skillset .section-heading {
-    color: #fff;
-  }
-
 @media (min-width: 768px) {
   section {
     padding: 9rem 0;
@@ -12013,4 +11999,9 @@ section#contact form#contactForm :-ms-input-placeholder {
   justify-content: space-between;
 }
 
-
+@media (max-width: 576px) {
+  .blog-post {
+      margin: 0 auto;
+      text-align: center;
+  }
+}
