--- a/css/styles.css
+++ b/css/styles.css
@@ -12023,3 +12023,11 @@ section#contact form#contactForm :-ms-input-placeholder {
   height: 100%;
   object-fit: cover;
 }
+
+/* Optional: Force specific styles used on desktop */
+.mobile-only {
+  display: none;
+}
+.desktop-only {
+  display: block;
+}
