--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ title: "{{ page.title }}"
         </div>
 
         <div class="blog-post-content">
-            {{ content }}
+            {{ content }} <!-- This is the full post content -->
         </div>
 
         <div class="text-center mt-4">
