--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -3,16 +3,8 @@ layout: default
 title: "{{ page.title }}"
 ---
 
-<section class="page-section bg-light" id="blog-post">
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">{{ page.title }}</h2>
-        </div>
-
-        <div class="blog-post-content">
-            {{ content }}
-        </div>
-
-
-    </div>
-</section>
+<div class="blog-post">
+    <h3 class="text-primary">{{ post.title }}</h3>
+    <p>{{ post.excerpt }}</p>
+    <a href="{{ post.url | relative_url }}" class="btn btn-primary">Read More</a>
+</div>
