--- a/css/styles.css
+++ b/css/styles.css
@@ -1111,6 +1111,12 @@ progress {
     flex: 1 0 0%;
   }
 
+/* CUSTOM */
+  .blog-post:nth-child(2) { /* Target the second blog post */
+    display: none;
+  }
+/**/
+
   .row-cols-md-auto > * {
     flex: 0 0 auto;
     width: auto;
